Ready to Review ✅ Splash Screen ✅ OnBoarding Start ✅ OnBoarding Finish

--- a/WabiSabiTeamProject/Feature/LaunchScreen/Base.lproj/LaunchScreen.storyboard
+++ b/WabiSabiTeamProject/Feature/LaunchScreen/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,10 +13,42 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wabi - Sabi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVX-6H-MuD">
+                                <rect key="frame" x="30" y="410.66666666666669" width="330" height="23"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Embracing our imperfection&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzR-br-6rh">
+                                <rect key="frame" x="30" y="441.66666666666669" width="330" height="14.333333333333314"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mascot" translatesAutoresizingMaskIntoConstraints="NO" id="YZY-kG-whi">
+                                <rect key="frame" x="147.66666666666666" y="322.66666666666669" width="95" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="68" id="L78-5D-HhP"/>
+                                    <constraint firstAttribute="width" constant="95" id="UNh-6y-NQ1"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" name="ColorPrimary"/>
+                        <constraints>
+                            <constraint firstItem="vVX-6H-MuD" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="2h4-Ap-KmV"/>
+                            <constraint firstItem="vVX-6H-MuD" firstAttribute="top" secondItem="YZY-kG-whi" secondAttribute="bottom" constant="20" id="72x-ys-LoU"/>
+                            <constraint firstItem="vVX-6H-MuD" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Pwx-ft-01O"/>
+                            <constraint firstItem="gzR-br-6rh" firstAttribute="top" secondItem="vVX-6H-MuD" secondAttribute="bottom" constant="8" symbolic="YES" id="Vfh-dn-tBs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vVX-6H-MuD" secondAttribute="trailing" constant="30" id="qXq-Wa-MDP"/>
+                            <constraint firstItem="gzR-br-6rh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="sQI-GR-tjc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gzR-br-6rh" secondAttribute="trailing" constant="30" id="tAq-VX-yDn"/>
+                            <constraint firstItem="YZY-kG-whi" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vSy-b1-uWX"/>
+                            <constraint firstItem="vVX-6H-MuD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="z5B-sc-aKd"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +56,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mascot" width="101" height="74"/>
+        <namedColor name="ColorPrimary">
+            <color red="0.32549019607843138" green="0.25882352941176467" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
